# speckle-server

./: .dockerignore  .editorconfig  .env-docker-compose  .env-example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitguardian.yml  .gitignore  .graphqlrc  .pre-commit-config.deployment.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  README.md  SECURITY.md  app.js  codecov.yml  collector-config.yaml  config.js  cube-unfoldings.html  docker-compose-deps.overlay.yml  docker-compose-deps.yml  docker-compose-dev.yml  docker-compose-ingress.yml  docker-compose-observability.yaml  docker-compose-prod.yml  docker-compose-speckle.overlay.yml  docker-compose-speckle.yml  docker-compose-test.yml  docker-compose.yaml  eslint.config.mjs  (+22 more)
.circleci/: Dockerfile  README.md  build-and-deploy.sh  build.sh  build_publish_fe2_sourcemaps.sh  check_version.py  ci-build-and-deploy.sh  common.sh  config-main.yml  config-pr.yml  config.yaml  config.yml  deploy.sh  deploy_in_new_setup.sh  get_version.sh  is_draft.sh  multiregion.test-ci.json  preview-service-acceptance-test.sh  publish.sh  publish_cloudflare_pages.sh  publish_docker.sh  publish_fe2_sourcemaps.sh  publish_helm_chart.sh  publish_helm_chart_oci.sh  shell.nix  should_build.sh  should_publish.sh  tag_test  update_helm_documentation.sh
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-devcontainer.yml  postCreateCommand.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  codecov.yml  copilot-instructions.md  pull_request_template.md
.husky/: pre-commit
.zed/: debug.json
db/: knex.js
frontend/: .env-example  (+7 more)
pyobjectloader2/: README.md  pyproject.toml  setup.py
pyobjectloader2/src/: __init__.py  databases.py  downloaders.py  helpers.py  interfaces.py  loader.py  objectloader2.py  objectloader2_factory.py  options.py  types.py
pyobjectloader2/tests/: __init__.py
pyobjectloader2/tests/helpers/: __init__.py  test_cache_pump.py
pyobjectloader2/tests/operations/: __init__.py  test_objectloader2.py
(+512 files in other folders)
